# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  file_dialog_test.py  pyproject.toml  pytest.ini  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  opetussuunnitelma_ohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: database_connection.py  exceptions.py  index.py  index_gui.py  index_text.py  index_ui.py  init_database.py  re_test.py
src/config/: .env  .env.test  config.py  lops21_curriculum.json  lops21_curriculum.py  lops21_curriculum_marsky.json  meb_config.py  meb_course_codes.csv  meb_exam_codes.csv  meb_exam_days.csv
src/help_files/: list_of_subjects_45_credits.txt  list_of_subjects_in_valid_plan.txt  list_of_subjects_valid_special_task.txt  valid_normal_plan.json  valid_special_plan.json
src/objects/: course.py  curriculum.py  plan.py  user.py
src/repositories/: plan_repository.py
src/schemas/: curriculum_schema.py  plan_schema.py
src/services/: file_service.py  meb_validation_service.py  plan_service.py  special_validation_service.py  user_service.py  validation_functions.py  validation_service.py
src/services/validation/: meb_validation_service.py  special_validation_service.py  validation_functions.py  validation_service.py
src/tests/test_files_and_db/: test_file_service.py
src/tests/test_objects/: course_test.py  curriculum_test.py  plan_test.py
src/ui/: ui.py
(+33 files in other folders)
