[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Topias Muukkonen <topias.muukkonen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
